# middleware/authenticate.js
@@ -18,33 +18,99 @@ const isAuthenticated = (req, res, next) => {
   }
 };
 
-const isAdmin = async (req, res, next) => {
-  const user = req.session.user.username;
-  
-  try {
-    const rolesCollection = mongodb.getDatabase().db('project1').collection('roles');
-    // console.log(rolesCollection)
-    const userRole = await rolesCollection.findOne({ login: user });
+const isGod = async (req, res, next) => {
+  if (req.session.user === undefined) {
+    const message = "You do not have access. You need to login";
 
-    if (userRole && userRole.role === 'admin') {
-      req.isAdmin = true;
-      req.isModerator = true; // Admins automatically have moderator privileges
-      console.log('You are admin');
-      next();
+    // Check if the request is for an API endpoint
+    if (req.originalUrl.startsWith('/api')) {
+      return res.status(401).json({ message });
     } else {
-      res.status(403).json({ message: 'You do not have admin privileges.' });
+      // If it's not an API request, render a view or redirect
+      res.render("index", { message, req }); // Pass the req object for dynamic login logout link
+      // Or redirect to a login page
+      // res.redirect('/login');
     }
-  } catch (error) {
-    console.error('Error checking admin role:', error);
-    res.status(500).json({ message: 'Internal server error' });
+  } else {
+    const user = req.session.user.username;
+    
+    try {
+      const rolesCollection = mongodb.getDatabase().db('project1').collection('roles');
+      // console.log(rolesCollection)
+      const userRole = await rolesCollection.findOne({ login: user });
+
+      if (userRole && userRole.role === 'god') {
+        req.isGod = true;
+        req.isAdmin = true;
+        req.isModerator = true; // Admins automatically have moderator privileges
+        console.log('You are almighty');
+        next();
+      } else {
+        res.status(403).json({ message: 'You do not have mighty super user privileges.' });
+      }
+    } catch (error) {
+      console.error('Error checking mighty super user role:', error);
+      res.status(500).json({ message: 'Internal server corrupted by evil thing.' });
+    }
+  }
+};
+
+const isAdmin = async (req, res, next) => {
+  if (req.session.user === undefined) {
+    const message = "You do not have access. You need to login";
+
+    // Check if the request is for an API endpoint
+    if (req.originalUrl.startsWith('/api')) {
+      return res.status(401).json({ message });
+    } else {
+      // If it's not an API request, render a view or redirect
+      res.render("index", { message, req }); // Pass the req object for dynamic login logout link
+      // Or redirect to a login page
+      // res.redirect('/login');
+    }
+  } else {
+    const user = req.session.user.username;
+    
+    try {
+      const rolesCollection = mongodb.getDatabase().db('project1').collection('roles');
+      // console.log(rolesCollection)
+      const userRole = await rolesCollection.findOne({ login: user });
+
+      if (userRole && userRole.role === 'god') {
+        req.isGod = true;
+        req.isAdmin = true;
+        req.isModerator = true; // Admins automatically have moderator privileges
+        console.log('You are admin');
+        next();
+      }
+      else if (userRole && userRole.role === 'admin') {
+        req.isAdmin = true;
+        req.isModerator = true; // Admins automatically have moderator privileges
+        console.log('You are admin');
+        next();
+      } else {
+        res.status(403).json({ message: 'You do not have admin privileges.' });
+      }
+    } catch (error) {
+      console.error('Error checking admin role:', error);
+      res.status(500).json({ message: 'Internal server error' });
+    }
   }
 };
 
 const isModerator = async (req, res, next) => {
-  // Check if the user is already identified as an admin
-  if (req.isAdmin) {
-    console.log('You are admin');
-    next();
+  if (req.session.user === undefined) {
+    const message = "You do not have access. You need to login";
+
+    // Check if the request is for an API endpoint
+    if (req.originalUrl.startsWith('/api')) {
+      return res.status(401).json({ message });
+    } else {
+      // If it's not an API request, render a view or redirect
+      res.render("index", { message, req }); // Pass the req object for dynamic login logout link
+      // Or redirect to a login page
+      // res.redirect('/login');
+    }
   } else {
     const user = req.session.user.username;
 
@@ -52,11 +118,25 @@ const isModerator = async (req, res, next) => {
       const rolesCollection = mongodb.getDatabase().db().collection('roles');
       const userRole = await rolesCollection.findOne({ login: user });
 
-      if (userRole && userRole.role === 'moderator') {
-        req.isModerator = true;
-        console.log('You are moderator');
+      if (userRole && userRole.role === 'god') {
+        req.isGod = true;
+        req.isAdmin = true;
+        req.isModerator = true; // Admins automatically have moderator privileges
+        console.log('You are admin');
         next();
-      } else {
+      }
+      else if (userRole && userRole.role === 'admin') {
+        req.isModerator = true;
+        req.isAdmin = true;
+        console.log('You have moderator privileges.');
+        next();
+      } 
+      else if (userRole && userRole.role === 'moderator') {
+        req.isModerator = true;
+        console.log('You have moderator privileges.');
+        next();
+      } 
+      else {
         res.status(403).json({ message: 'You do not have moderator privileges.' });
       }
     } catch (error) {
@@ -69,6 +149,7 @@ const isModerator = async (req, res, next) => {
 
 module.exports = {
   isAuthenticated,
+  isGod,
   isAdmin,
   isModerator
 };
