# swagger.json
@@ -5,11 +5,11 @@
     "version": "1.0.0",
     "description": ""
   },
-  "host": "cse341-node-project2-w4.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https",
-    "http"
+    "http",
+    "https"
   ],
   "paths": {
     "/login": {
@@ -26,8 +26,8 @@
       "get": {
         "description": "",
         "responses": {
-          "500": {
-            "description": "Internal Server Error"
+          "default": {
+            "description": ""
           }
         }
       }
@@ -44,9 +44,6 @@
     },
     "/user/": {
       "get": {
-        "tags": [
-          "users"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -64,9 +61,6 @@
         }
       },
       "post": {
-        "tags": [
-          "users"
-        ],
         "description": "",
         "parameters": [
           {
@@ -76,24 +70,6 @@
               "type": "object",
               "properties": {
                 "birthday": {
-                  "example": "any"
-                },
-                "username": {
-                  "example": "any"
-                },
-                "fullname": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "country": {
-                  "example": "any"
-                },
-                "password": {
                   "example": "any"
                 }
               }
@@ -118,9 +94,6 @@
     },
     "/user/{id}": {
       "get": {
-        "tags": [
-          "users"
-        ],
         "description": "",
         "produces": [
           "application/json"
@@ -140,15 +113,15 @@
           "403": {
             "description": "Forbidden"
           },
+          "404": {
+            "description": "Not Found"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": [
-          "users"
-        ],
         "description": "",
         "parameters": [
           {
@@ -164,24 +137,6 @@
               "type": "object",
               "properties": {
                 "birthday": {
-                  "example": "any"
-                },
-                "username": {
-                  "example": "any"
-                },
-                "fullname": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "favoriteColor": {
-                  "example": "any"
-                },
-                "country": {
-                  "example": "any"
-                },
-                "password": {
                   "example": "any"
                 }
               }
@@ -204,9 +159,6 @@
         }
       },
       "delete": {
-        "tags": [
-          "users"
-        ],
         "description": "",
         "parameters": [
           {
@@ -242,8 +194,8 @@
           "200": {
             "description": "OK"
           },
-          "401": {
-            "description": "Unauthorized"
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
@@ -291,8 +243,8 @@
           "204": {
             "description": "No Content"
           },
-          "401": {
-            "description": "Unauthorized"
+          "403": {
+            "description": "Forbidden"
           },
           "412": {
             "description": "Precondition Failed"
@@ -407,8 +359,8 @@
           "204": {
             "description": "No Content"
           },
-          "401": {
-            "description": "Unauthorized"
+          "403": {
+            "description": "Forbidden"
           },
           "500": {
             "description": "Internal Server Error"
